Внесения правки в public
Изменения логотипа
Отредактировал описание
Доработал страницу пользователя

--- a/public/index.html
+++ b/public/index.html
@@ -9,19 +9,18 @@
   <link rel="apple-touch-icon" href="/favicon.ico" />
   <link rel="manifest" href="/manifest.json" />
 
-  <!-- SEO метатеги -->
-  <meta property="og:title" content="Sola Coin - Crypto Messenger" />
-  <meta property="og:description" content="Secure and decentralized crypto messenger" />
-  <meta property="og:image" content="https://solacoin.org/192.png" />
-  <meta property="og:url" content="https://solacoin.org" />
+  <!-- SEO -->
+  <meta property="og:title" content="SolaChat" />
+  <meta property="og:description" content="Access your SolaChat messages from any mobile and desktop device." />
+  <meta property="og:image" content="https://solachat.org/192.png" />
+  <meta property="og:url" content="https://solachat.org" />
   <meta property="og:type" content="website" />
 
-  <link rel="canonical" href="https://solacoin.org" />
+  <link rel="canonical" href="https://solachat.org" />
 
   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
 
-  <!-- Тег заголовка для поисковиков -->
-  <title>Sola Coin - Secure Crypto Messenger</title>
+  <title>SolaChat</title>
 </head>
 <body>
 <noscript>You can communicate!</noscript>
