--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   <title>SolaChat</title>
 </head>
 <body>
-<noscript>You can communicate!</noscript>
+<noscript>SolaChat is a cloud-based mobile and desktop messaging app with a focus on security and speed.</noscript>
 <div id="root"></div>
 </body>
 </html>
